--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %meta{http_equiv: 'Content-Type', content: 'text/html; charset=utf-8'}
+    %meta{http: { equiv: "Content-Type"}, content: 'text/html; charset=utf-8'}
     %title ChatSpace
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
