--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,13 @@
-@import "config/reset";
 @import "font-awesome";
-@import "./variable";
-@import "./size-design";
-@import "modules/user";
 @import "config/colors";
+@import "config/font-size";
+@import "config/reset";
+@import "mixins/vendor_prefix";
+@import "modules/side_bar";
+@import "modules/chat";
 @import "modules/flash";
-@import "groups/group";
-@import "messages/messages";
+@import "modules/user";
+@import "modules/group";
+@import "messages/messages.scss"
+
+
