--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,2 +1,28 @@
+.wrapper
 
-= render partial: 'messages'
+  = render 'shared/side_bar'
+
+  .chat
+    .header
+      .left-header
+        .left-header__title
+          = @group.name
+        %ul.left-header__members
+          Member：
+          - @group.users.each do |user|
+            %li.member
+              = user.name       
+      .right-header
+        .right-header__button
+          Edit
+    .messages
+      - @messages.each do |message|
+        = render partial: "message", locals: { message: message }
+    .form
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        .form__mask
+          = f.label :image, class: 'form__mask__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
