--- a/app/assets/stylesheets/modules/_chat.scss
+++ b/app/assets/stylesheets/modules/_chat.scss
@@ -28,13 +28,18 @@
       }
     }
     .right-header {
-      border: 1px solid $light_blue;
-      color: $light_blue;
-      float: right;
-      height: 40px;
-      line-height: 40px;
-      margin-top: 28px;
-      padding: 0 20px;
+      &--button{
+        a{
+          border: 1px solid $light_blue;
+          color: $light_blue;
+          float: right;
+          height: 40px;
+          line-height: 40px;
+          margin-top: 28px;
+          padding: 0 20px;
+          text-decoration: none;
+        }
+      }
     }
   }
 
