--- a/app/assets/stylesheets/modules/_chat.scss
+++ b/app/assets/stylesheets/modules/_chat.scss
@@ -84,6 +84,7 @@
     &__box{
       display: flex;
       width: 100%;
+      position: relative;
       form{
         display: flex;
         width: 100%;
@@ -94,16 +95,19 @@
         height: 50px;
         width: 100%;
         padding-left: 10px;
+      
       }
       &__mask {
         background-color: $white;
         float: left;
         height: 50px;
-        padding-right: 10px;
         &__image {
           font-size: 20px;
-          line-height: 50px;
+          
           cursor: pointer;
+          position: absolute;
+          right: 125px;
+          top: 10px;
         }
         .hidden {
           display: none;
