--- a/app/assets/stylesheets/modules/_side_bar.scss
+++ b/app/assets/stylesheets/modules/_side_bar.scss
@@ -38,6 +38,9 @@
       box-sizing: border-box;
       padding: 20px 0 40px;
       width: 300px;
+      a{
+        text-decoration: none;
+      }
       &__name {
         color: $white;
         font-size: $side_group_name;
